# TGV2RayScraper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
adapters/: channel.py  config.py  scraper.py
adapters/async_/: channels.py  configs.py  scraper.py
adapters/sync/: channels.py  configs.py  scraper.py
channels/: current.json  urls.txt
core/: constants.py  context.py  decorators.py  logger.py  typing.py  utils.py
core/constants/: common.py  formats.py  messages.py  patterns.py  templates.py
core/constants/messages/: error.py  info.py  warning.py
core/constants/patterns/: common.py  proxy.py  telegram.py
core/constants/patterns/v2ray/: common.py  detector.py  registry.py  url.py
core/constants/templates/: common.py  error.py  title.py  warning.py
core/constants/templates/debug/: channel.py  common.py  config.py
core/constants/templates/info/: channel.py  common.py  config.py
core/terminal/: __init__.py  console.py  logger.py  progress.py  renderers.py  tables.py
docs/ru/: LICENSE  README.md
domain/: channel.py  config.py  predicates.py
scripts/: async_scraper.py  common.py  const.py  logger.py  scraper.py  update_channels.py  utils.py  v2ray_cleaner.py
tests/: conftest.py
tests/integration/async_/: test_async_configs_flow.py
tests/unit/core/: test_context.py  test_decorators.py  test_logger.py  test_utils.py
tests/unit/core/constants/: common.py
tests/unit/core/constants/examples/: decorators.py  logger.py  utils.py
tests/unit/core/constants/examples/patterns/: telegram.py
tests/unit/core/constants/examples/patterns/v2ray/: common.py  detector.py  registry.py  url.py
tests/unit/core/constants/examples/terminal/: logger.py
tests/unit/core/constants/patterns/: test_telegram.py
tests/unit/core/constants/patterns/v2ray/: test_common.py  test_detector.py  test_regitry.py  test_url.py
tests/unit/core/constants/test_cases/: decorators.py  logger.py  utils.py
tests/unit/core/constants/test_cases/patterns/: telegram.py
tests/unit/core/constants/test_cases/patterns/v2ray/: common.py  detector.py  registry.py  url.py
tests/unit/core/constants/test_cases/terminal/: logger.py
tests/unit/core/terminal/: test_console.py  test_logger.py  test_progress.py  test_renderers.py  test_tables.py
tests/unit/domain/: test_channel.py  test_predicates.py
tests/unit/domain/constants/: common.py
tests/unit/domain/constants/examples/: channel.py  predicates.py
tests/unit/domain/constants/fixtures/: channel.py
tests/unit/domain/constants/test_cases/: channel.py  predicates.py
